# pysolve

./: .gitignore  pyproject.toml
src/pysolve/: cs_call.py  loaders.py
tests/: test_builder.py  test_hello.py  test_msolve.py
